TEST : IncidentServiceTest 테스트 코드 작성 및 완료