@@ -51,4 +51,5 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+    jvmArgs += ["-XX:+EnableDynamicAgentLoading"]
 }
